turning in what I have, almost done besides for figuring out interface and fixing any errors, will be working on this and past projects over weekend.

--- a/SweepstakesProject.csproj
+++ b/SweepstakesProject.csproj
@@ -44,9 +44,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contestant.cs" />
+    <Compile Include="ISweepstakesManager.cs" />
     <Compile Include="MarketingFirm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SweepstakesQueueManager.cs" />
+    <Compile Include="SweepstakeStackManager.cs" />
     <Compile Include="Sweepstake.cs" />
   </ItemGroup>
   <ItemGroup>
